[gd_scene load_steps=8 format=3 uid="uid://cfm46bfyyqy6x"]

[ext_resource type="Script" path="res://Door.gd" id="1_dfcxi"]
[ext_resource type="Script" path="res://PhysicsDoor.gd" id="1_xs0yk"]
[ext_resource type="PackedScene" uid="uid://cfw31sfi6y2ur" path="res://systems/interaction/interactable.tscn" id="3_qnc5v"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_xmwqr"]
points = PackedVector3Array(-0.65, -1.5, -0.05, -0.65, -1.5, 0.05, -0.65, 1.5, -0.05, 0.65, -1.5, -0.05, 0.65, -1.5, 0.05, -0.65, 1.5, 0.05, 0.65, 1.5, -0.05, 0.65, 1.5, 0.05)

[sub_resource type="BoxMesh" id="BoxMesh_fmbvn"]
size = Vector3(1.3, 3, 0.1)

[sub_resource type="ArrayMesh" id="ArrayMesh_m3pwm"]
_surfaces = [{
"aabb": AABB(-0.678867, -1.52887, -0.0788675, 1.35773, 3.05774, 0.157745),
"attribute_data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 171, 170, 42, 63, 0, 0, 0, 0, 171, 170, 170, 62, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 63, 171, 170, 42, 63, 0, 0, 0, 63, 171, 170, 170, 62, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 63, 171, 170, 170, 62, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 63, 171, 170, 42, 63, 0, 0, 0, 0, 171, 170, 170, 62, 0, 0, 0, 63, 171, 170, 170, 62, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 0, 63, 171, 170, 170, 62, 0, 0, 128, 63, 171, 170, 170, 62, 0, 0, 0, 63, 171, 170, 42, 63, 0, 0, 0, 63, 171, 170, 42, 63, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 63, 171, 170, 170, 62, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63),
"format": 34359742487,
"index_count": 36,
"index_data": PackedByteArray(0, 0, 4, 0, 2, 0, 2, 0, 4, 0, 6, 0, 1, 0, 5, 0, 3, 0, 3, 0, 5, 0, 7, 0, 8, 0, 12, 0, 10, 0, 10, 0, 12, 0, 14, 0, 9, 0, 13, 0, 11, 0, 11, 0, 13, 0, 15, 0, 16, 0, 20, 0, 18, 0, 18, 0, 20, 0, 22, 0, 17, 0, 21, 0, 19, 0, 19, 0, 21, 0, 23, 0),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray(66, 202, 45, 191, 238, 177, 195, 63, 74, 133, 161, 61, 66, 202, 45, 63, 238, 177, 195, 63, 74, 133, 161, 189, 66, 202, 45, 63, 238, 177, 195, 63, 74, 133, 161, 61, 66, 202, 45, 191, 238, 177, 195, 63, 74, 133, 161, 189, 66, 202, 45, 191, 238, 177, 195, 191, 74, 133, 161, 61, 66, 202, 45, 63, 238, 177, 195, 191, 74, 133, 161, 189, 66, 202, 45, 63, 238, 177, 195, 191, 74, 133, 161, 61, 66, 202, 45, 191, 238, 177, 195, 191, 74, 133, 161, 189, 66, 202, 45, 63, 238, 177, 195, 63, 74, 133, 161, 61, 66, 202, 45, 191, 238, 177, 195, 63, 74, 133, 161, 189, 66, 202, 45, 63, 238, 177, 195, 63, 74, 133, 161, 189, 66, 202, 45, 191, 238, 177, 195, 63, 74, 133, 161, 61, 66, 202, 45, 63, 238, 177, 195, 191, 74, 133, 161, 61, 66, 202, 45, 191, 238, 177, 195, 191, 74, 133, 161, 189, 66, 202, 45, 63, 238, 177, 195, 191, 74, 133, 161, 189, 66, 202, 45, 191, 238, 177, 195, 191, 74, 133, 161, 61, 66, 202, 45, 63, 238, 177, 195, 63, 74, 133, 161, 61, 66, 202, 45, 191, 238, 177, 195, 191, 74, 133, 161, 61, 66, 202, 45, 191, 238, 177, 195, 63, 74, 133, 161, 61, 66, 202, 45, 63, 238, 177, 195, 191, 74, 133, 161, 61, 66, 202, 45, 63, 238, 177, 195, 63, 74, 133, 161, 189, 66, 202, 45, 191, 238, 177, 195, 191, 74, 133, 161, 189, 66, 202, 45, 191, 238, 177, 195, 63, 74, 133, 161, 189, 66, 202, 45, 63, 238, 177, 195, 191, 74, 133, 161, 189, 255, 127, 255, 127, 255, 255, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 0, 128, 255, 255, 255, 255, 0, 0, 0, 128, 255, 127, 255, 191, 255, 255, 0, 128, 255, 255, 255, 255, 0, 0, 0, 128, 255, 127, 255, 191, 255, 255, 0, 128, 255, 255, 255, 255, 0, 0, 0, 128, 255, 127, 255, 191, 255, 255, 0, 128, 255, 255, 255, 255, 0, 0, 0, 128, 255, 127, 255, 191, 0, 128, 255, 255, 0, 0, 255, 191, 0, 128, 0, 0, 255, 255, 255, 191, 0, 128, 255, 255, 0, 0, 255, 191, 0, 128, 0, 0, 255, 255, 255, 191, 0, 128, 255, 255, 0, 0, 255, 191, 0, 128, 0, 0, 255, 255, 255, 191, 0, 128, 255, 255, 0, 0, 255, 191, 0, 128, 0, 0, 255, 255, 255, 191)
}]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0chwt"]
albedo_color = Color(0, 0, 0, 1)

[node name="Door" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.657218, 0, 0)
script = ExtResource("1_dfcxi")

[node name="PhysicsDoor" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.675, 0, 0)
collision_layer = 10
collision_mask = 15
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_xs0yk")

[node name="Interactable" parent="PhysicsDoor" instance=ExtResource("3_qnc5v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.675, 0, 0)

[node name="CollisionShape3D" parent="PhysicsDoor/Interactable" index="0"]
shape = SubResource("ConvexPolygonShape3D_xmwqr")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PhysicsDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.675, 0, 0)
mesh = SubResource("BoxMesh_fmbvn")

[node name="outline" type="MeshInstance3D" parent="PhysicsDoor/MeshInstance3D"]
visible = false
mesh = SubResource("ArrayMesh_m3pwm")
surface_material_override/0 = SubResource("StandardMaterial3D_0chwt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PhysicsDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.677218, 0, 0)
shape = SubResource("ConvexPolygonShape3D_xmwqr")

[connection signal="focused" from="PhysicsDoor/Interactable" to="PhysicsDoor" method="_on_interactable_focused"]
[connection signal="holded" from="PhysicsDoor/Interactable" to="PhysicsDoor" method="_on_interactable_holded"]
[connection signal="interacted" from="PhysicsDoor/Interactable" to="PhysicsDoor" method="_on_interactable_interacted"]
[connection signal="released" from="PhysicsDoor/Interactable" to="PhysicsDoor" method="_on_interactable_released"]
[connection signal="unfocused" from="PhysicsDoor/Interactable" to="PhysicsDoor" method="_on_interactable_unfocused"]

[editable path="PhysicsDoor/Interactable"]
